session partial completion

--- a/Recyclables/views/partials/navbar.handlebars
+++ b/Recyclables/views/partials/navbar.handlebars
@@ -34,5 +34,6 @@ body {
   {{#if type}}
 	<a href="/user/userManagement">User Management</a>
 	{{/if}}
-  
+  <a style="float: right;"href="/user/logout">Logout</a>
+
 </div>
