--- a/Recyclables/views/user/dashboard.handlebars
+++ b/Recyclables/views/user/dashboard.handlebars
@@ -49,9 +49,8 @@
         <div class="col-sm-4">
           <div class="well">
             <h3>{{dataValues.location_description}}</h3>
-            <p>Level {{dataValues.floor_level}}</p> 
-            <img width="300" height="200" src="{{dataValues.camera_ipaddress}}"></img>
-            <p>Status is {{dataValues.status}}</p> 
+            <p><span style="width: 80%; float:left;">Level {{dataValues.floor_level}}</span><span style="width: 20%; float: right;">{{dataValues.status}}</span></p>
+            <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
           </div>
         </div>
     {{/each}}
