fix routes, logout, navbar, dashboard

--- a/Recyclables/views/partials/navbar.handlebars
+++ b/Recyclables/views/partials/navbar.handlebars
@@ -30,7 +30,7 @@ body {
 </style>
 
 <div class="topnav">
-  <a class="active" href="/user/dashboard">Home</a>
+  <a class="active" href="/dashboard/main">Home</a>
   {{#if type}}
 	<a href="/user/userManagement">User Management</a>
 	{{/if}}
