--- a/Recyclables/views/user/addBins.handlebars
+++ b/Recyclables/views/user/addBins.handlebars
@@ -13,7 +13,7 @@
 			</ol>
 			</div>
 			{{/if}}
-			<h3 class="text-center">Add New Staff</h3>
+			<h3 class="text-center">Add New Bin</h3>
 			<form action="" method="post">
 				<div class="form-group">
 					<label for="name">Name</label>
