--- a/Recyclables/views/user/login.handlebars
+++ b/Recyclables/views/user/login.handlebars
@@ -78,6 +78,6 @@ span.psw {
     <label for="password"><b>Password</b></label>
     <input type="password" placeholder="Enter Password" name="password" required>
       
-    <button type="submit">Login</button>
+    <button type="submit" class="btn btn-success">Login</button>
   </div>
 </form>
