--- a/Recyclables/views/user/dashboard.handlebars
+++ b/Recyclables/views/user/dashboard.handlebars
@@ -166,6 +166,12 @@ figure {
   #total{
     margin-right: 5%;
   }
+
+  
+  .well:hover{
+    cursor: pointer;
+    background-color: #e0e0e0;
+  }
 </style>
   <div style = "margin-left: 10%; margin-right: 10%; margin-top: 3%;">
     <div class="well" style="text-align: center;">
@@ -176,7 +182,7 @@ figure {
     <div class="row">
     {{#each binlist}}
         <div class="col-sm-4">
-          <div class="well" id="main">
+          <div class="well" id="main" data-id="{{dataValues.bin_id}}">
             <h3>{{dataValues.location_description}}</h3>
             <p><span style="width: 80%; float:left;">Level {{dataValues.floor_level}}</span><span style="width: 20%; float: right;">{{dataValues.status}}</span></p>
             <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
@@ -293,4 +299,21 @@ figure {
   }
   var x = document.getElementById("datetime");
   x.innerText = day + ", " + dates + " " + month + " " + year + " " + hr + ":" + min + ampm ;
+
+
+
+  //Hello zuhe!
+  $(".well").on("click", (e)=>{
+
+    let tgt = e.target;
+    let x=0
+
+    while(tgt.tagName != "DIV" || !$(tgt).hasClass("well")){
+      tgt = tgt.parentElement;
+      x++
+      if(x>5)break;
+    }
+
+    window.location.href = `/dashboard/location?loc=${$(tgt).data("id")}`
+  })
 </script>
