--- a/Recyclables/views/bin/addBins.handlebars
+++ b/Recyclables/views/bin/addBins.handlebars
@@ -16,27 +16,24 @@
 			<h3 class="text-center">Add New Bin</h3>
 			<form action="" method="post">
 				<div class="form-group">
-					<label for="name">Name</label>
-					<input type="text" class="form-control" name="name" value="" required>
+					<label for="Location">Bin Location</label>
+					<input type="text" class="form-control" name="location" value="" required>
 				</div>
 				<div class="form-group">
-					<label for="type">Staff Type</label>
-					<select name="type" id="type">
-						<option value="cleaner">Cleaner</option>
-						<option value="supervisor">Supervisor</option>
+					<label for="level">Floor Level</label>
+					<select name="level" id="level">
+						<option value="B1">B1</option>
+						<option value="L1">L1</option>
+						<option value="L2">L2</option>
+						<option value="L3">L3</option>
+						<option value="L4">L4</option>
+						<option value="L5">L5</option>
+						<option value="L6">L6</option>
 					</select>
-				</div>
+				</div>				
 				<div class="form-group">
-					<label for="mobileNum">Mobile Number</label>
-					<input type="tel" class="form-control" name="mobileNum" pattern="[0-9]{8}" value="" required>
-				</div>
-				<div class="form-group">
-					<label for="password">Password</label>
-					<input type="password" name="password" class="form-control" value="" required>
-				</div>
-				<div class="form-group">
-					<label for="password2">Confirm Password</label>
-					<input type="password" name="password2" class="form-control" value="" required>
+					<label for="remarks">Remarks</label>
+					<input type="text" name="remarks" class="form-control" value="" required>
 				</div>
 				<button type="submit" class="btn btn-success">Submit</button>
 			</form>
