--- a/Recyclables/views/dashboard/dashboard.handlebars
+++ b/Recyclables/views/dashboard/dashboard.handlebars
@@ -167,7 +167,7 @@ figure {
     margin-right: 5%;
   }
 </style>
-  <div style = "margin-left: 10%; margin-right: 10%; margin-top: 3%;">
+  <div style = "margin-left: 3.5%; margin-right: 3.5%; margin-top: 3%;">
     <div class="well" style="text-align: center;">
       <h3>Overview Dashboard for Recyclable Bins</h3>
       <p>Last refreshed: <span id = "datetime"></span></p>
@@ -177,8 +177,11 @@ figure {
     {{#each binlist}}
         <div class="col-sm-4">
           <div class="well" id="main">
-            <h3>{{dataValues.location_description}}</h3>
-            <p><span style="width: 80%; float:left;">Level {{dataValues.floor_level}}</span><span style="width: 20%; float: right;">{{dataValues.status}}</span></p>
+            <span>
+            <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
+            <button type="button" class="btn btn-success" style="display: inline-block; float:right;">Success</button>
+</span>
+            <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span><span style="display: inline-block; float:right">{{dataValues.status}}</span></p>
             <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
             <br>
             <br>
