added get all binmanagement route and handlebars
updated navrbar with binmanagement

--- a/Recyclables/views/partials/navbar.handlebars
+++ b/Recyclables/views/partials/navbar.handlebars
@@ -33,6 +33,7 @@ body {
   <a class="active" href="/dashboard/main">Home</a>
   {{#if type}}
 	<a href="/user/userManagement">User Management</a>
+  <a href="/bin/binManagement">Bin Management</a>
 	{{/if}}
   <a style="float: right;"href="/user/logout">Logout</a>
 
