--- a/Recyclables/views/bin/binManagement.handlebars
+++ b/Recyclables/views/bin/binManagement.handlebars
@@ -36,13 +36,13 @@
         <td>{{dataValues.status}}</td>
         {{#if dataValues.remarks}}
         <td>
-            <a href="/bin/updatestatus/{{dataValues.userId}}"><button class="btn btn-danger" style="float: left;">Deactivate</button></a>
-            <a href="/bin/updateinformation/{{dataValues.userId}}"><button class="btn btn-info" style="float: right;">Update Information</button></a>
+            <a href="/bin/updatestatus/{{dataValues.bin_id}}"><button class="btn btn-danger" style="float: left;">Deactivate</button></a>
+            <a href="/bin/updateinformation/{{dataValues.bin_id}}"><button class="btn btn-info" style="float: right;">Update Information</button></a>
         </td>
         {{else}}
         <td>
-            <a href="/bin/updatestatus/{{dataValues.userId}}"><button class="btn btn-success" style="float: left;">Activate</button></a>
-            <a href="/bin/updateinformation/{{dataValues.userId}}"><button class="btn btn-info" style="float: right;">Update Information</button></a>
+            <a href="/bin/updatestatus/{{dataValues.bin_id}}"><button class="btn btn-success" style="float: left;">Activate</button></a>
+            <a href="/bin/updateinformation/{{dataValues.bin_id}}"><button class="btn btn-info" style="float: right;">Update Information</button></a>
         </td>
         {{/if}}
     </tr>
