--- a/Recyclables/views/dashboard/dashboard.handlebars
+++ b/Recyclables/views/dashboard/dashboard.handlebars
@@ -167,7 +167,42 @@ figure {
     margin-right: 5%;
   }
 
-  
+  .accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.active, .accordion:hover {
+  background-color: #ccc;
+}
+
+.accordion:after {
+  content: '\002B';
+  color: #777;
+  font-weight: bold;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2212";
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
   .well:hover{
     cursor: pointer;
     background-color: #e0e0e0;
@@ -179,34 +214,138 @@ figure {
       <p>Last refreshed: <span id = "datetime"></span></p>
     </div>
 
-    <div class="row">
-    {{#each binlist}}
-        <div class="col-sm-4">
-          <div class="well" id="main">
-            <span>
-            <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
-            <button type="button" class="btn btn-success" style="display: inline-block; float:right;">Success</button>
-</span>
-            <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span><span style="display: inline-block; float:right">{{dataValues.status}}</span></p>
-            <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
-            <br>
-            <br>
-            <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
-            <div id="{{dataValues.bin_id}}_{{dataValues.current_plastic}}_{{dataValues.threshold}}_plastic" style='background-color:Red; width:100%'>
-              <p style="color: Red; text-align: center; opacity: 0">100%</p>
-            </div>
-            <br>
-            <br>
-            <h3 id="{{dataValues.bin_id}}_metal" style="margin: 0%">Metal</h3>
-            <div id="{{dataValues.bin_id}}_{{dataValues.current_metal}}_{{dataValues.threshold}}_metal" style='background-color:Green; width:100%'>
-              <p style="color: Green; text-align: center; opacity: 0">100% </p>
+    <button class="accordion"><h3 style="margin: 0">Alert: {{alertlist.length}}</h3></button>
+    <div class="panel">
+      <div class="row">
+      {{#each alertlist}}
+          <div class="col-sm-4">
+            <div class="well" id="main">
+              <span>
+              <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
+              <button type="button" class="btn btn-success" style="display: inline-block; float:right;">Success</button></span>
+              <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
+              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
+              <br>
+              <br>
+              <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
+              <div id="{{dataValues.bin_id}}_{{dataValues.current_plastic}}_{{dataValues.threshold}}_plastic" style='background-color:Red; width:100%'>
+                <p style="color: Red; text-align: center; opacity: 0">100%</p>
+              </div>
+              <br>
+              <br>
+              <h3 id="{{dataValues.bin_id}}_metal" style="margin: 0%">Metal</h3>
+              <div id="{{dataValues.bin_id}}_{{dataValues.current_metal}}_{{dataValues.threshold}}_metal" style='background-color:Green; width:100%'>
+                <p style="color: Green; text-align: center; opacity: 0">100% </p>
+              </div>
             </div>
           </div>
-        </div>
-    {{/each}}
+      {{/each}}
+      </div>
+    </div>
+
+    <button class="accordion"><h3 style="margin: 0">Danger: {{dangerlist.length}}</h3></button>
+    <div class="panel">
+      <div class="row">
+      {{#each dangerlist}}
+          <div class="col-sm-4">
+            <div class="well" id="main">
+              <span>
+              <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
+              <button type="button" class="btn btn-success" style="display: inline-block; float:right;">Success</button></span>
+              <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
+              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
+              <br>
+              <br>
+              <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
+              <div id="{{dataValues.bin_id}}_{{dataValues.current_plastic}}_{{dataValues.threshold}}_plastic" style='background-color:Red; width:100%'>
+                <p style="color: Red; text-align: center; opacity: 0">100%</p>
+              </div>
+              <br>
+              <br>
+              <h3 id="{{dataValues.bin_id}}_metal" style="margin: 0%">Metal</h3>
+              <div id="{{dataValues.bin_id}}_{{dataValues.current_metal}}_{{dataValues.threshold}}_metal" style='background-color:Green; width:100%'>
+                <p style="color: Green; text-align: center; opacity: 0">100% </p>
+              </div>
+            </div>
+          </div>
+      {{/each}}
+      </div>
+    </div>
+
+    <button class="accordion"><h3 style="margin: 0">Active: {{activelist.length}}</h3></button>
+    <div class="panel">
+<div class="row">
+      {{#each activelist}}
+          <div class="col-sm-4">
+            <div class="well" id="main">
+              <span>
+              <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
+              <button type="button" class="btn btn-success" style="display: inline-block; float:right;">Success</button></span>
+              <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
+              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
+              <br>
+              <br>
+              <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
+              <div id="{{dataValues.bin_id}}_{{dataValues.current_plastic}}_{{dataValues.threshold}}_plastic" style='background-color:Red; width:100%'>
+                <p style="color: Red; text-align: center; opacity: 0">100%</p>
+              </div>
+              <br>
+              <br>
+              <h3 id="{{dataValues.bin_id}}_metal" style="margin: 0%">Metal</h3>
+              <div id="{{dataValues.bin_id}}_{{dataValues.current_metal}}_{{dataValues.threshold}}_metal" style='background-color:Green; width:100%'>
+                <p style="color: Green; text-align: center; opacity: 0">100% </p>
+              </div>
+            </div>
+          </div>
+      {{/each}}
+      </div>
+    </div>
+
+    <button class="accordion"><h3 style="margin: 0">Inactive: {{inactivelist.length}}</h3></button>
+    <div class="panel">
+<div class="row">
+      {{#each inactivelist}}
+          <div class="col-sm-4">
+            <div class="well" id="main">
+              <span>
+              <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
+              <button type="button" class="btn btn-success" style="display: inline-block; float:right;">Success</button></span>
+              <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
+              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
+              <br>
+              <br>
+              <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
+              <div id="{{dataValues.bin_id}}_{{dataValues.current_plastic}}_{{dataValues.threshold}}_plastic" style='background-color:Red; width:100%'>
+                <p style="color: Red; text-align: center; opacity: 0">100%</p>
+              </div>
+              <br>
+              <br>
+              <h3 id="{{dataValues.bin_id}}_metal" style="margin: 0%">Metal</h3>
+              <div id="{{dataValues.bin_id}}_{{dataValues.current_metal}}_{{dataValues.threshold}}_metal" style='background-color:Green; width:100%'>
+                <p style="color: Green; text-align: center; opacity: 0">100% </p>
+              </div>
+            </div>
+          </div>
+      {{/each}}
+      </div>
     </div>
 </div>
 <script>
+
+  var acc = document.getElementsByClassName("accordion");
+  var i;
+
+  for (i = 0; i < acc.length; i++) {
+    acc[i].addEventListener("click", function() {
+      this.classList.toggle("active");
+      var panel = this.nextElementSibling;
+      if (panel.style.maxHeight) {
+        panel.style.maxHeight = null;
+      } else {
+        panel.style.maxHeight = panel.scrollHeight + "px";
+      } 
+    });
+  }
 
   var allmain = document.querySelectorAll("[id='main']");
   for (var i = 0, len = allmain.length ; i < len; i++) {
