created model site and a dummy form to change to

--- a/Recyclables/views/partials/navbar.handlebars
+++ b/Recyclables/views/partials/navbar.handlebars
@@ -34,6 +34,7 @@ body {
   {{#if type}}
 	<a href="/user/userManagement">User Management</a>
   <a href="/bin/binManagement">Bin Management</a>
+  <a href="/model/main">Model Management</a>
 	{{/if}}
   <a style="float: right;"href="/user/logout">Logout</a>
 
