--- a/Recyclables/views/bin/addBins.handlebars
+++ b/Recyclables/views/bin/addBins.handlebars
@@ -16,24 +16,28 @@
 			<h3 class="text-center">Add New Bin</h3>
 			<form action="" method="post">
 				<div class="form-group">
+					<label for="camera">Camera Address</label>
+					<input type="text" class="form-control" name="camera" value="" required>
 					<label for="Location">Bin Location</label>
 					<input type="text" class="form-control" name="location" value="" required>
 				</div>
 				<div class="form-group">
-					<label for="level">Floor Level</label>
-					<select name="level" id="level">
-						<option value="B1">B1</option>
-						<option value="L1">L1</option>
-						<option value="L2">L2</option>
-						<option value="L3">L3</option>
-						<option value="L4">L4</option>
-						<option value="L5">L5</option>
-						<option value="L6">L6</option>
-					</select>
-				</div>				
+					<div style= "display: inline-block;">
+						<label for="level">Floor Level</label>
+					<input class="form-control"  name="level" type="number" id="level">
+					</div>
+
+					<div style= "display: inline-block; float:right;">
+						<label for="threshold">Threshold</label>
+					<input type="number" name="threshold" class="form-control" value="" min="0" required>
+					</div>
+					
+				
+					
+				</div>
 				<div class="form-group">
 					<label for="remarks">Remarks</label>
-					<input type="text" name="remarks" class="form-control" value="" required>
+					<input type="text" name="remarks" class="form-control" value="">
 				</div>
 				<button type="submit" class="btn btn-success">Submit</button>
 			</form>
