--- a/Recyclables/views/dashboard/dashboard.handlebars
+++ b/Recyclables/views/dashboard/dashboard.handlebars
@@ -185,7 +185,7 @@ figure {
           <div class="well" id="main">
             <span>
             <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
-            <button type="button" class="btn btn-success" style="display: inline-block; float:right;">Success</button>
+            <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a>
 </span>
             <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span><span style="display: inline-block; float:right">{{dataValues.status}}</span></p>
             <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
