--- a/Recyclables/views/dashboard/dashboard.handlebars
+++ b/Recyclables/views/dashboard/dashboard.handlebars
@@ -223,7 +223,7 @@ figure {
                 <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
                 <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a></span>
                 <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span><span style="display: inline-block; float:right">{{dataValues.status}}</span></p>
-                <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
+                <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=null; this.src='/img/video-error.png'"></img>
                 <br>
                 <br>
                 <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
@@ -252,7 +252,7 @@ figure {
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
               <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a></span>
               <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
-              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
+              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=null; this.src='/img/video-error.png'"></img>
               <br>
               <br>
               <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
@@ -281,7 +281,7 @@ figure {
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
               <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a></span>
               <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
-              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
+              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=null; this.src='/img/video-error.png'"></img>
               <br>
               <br>
               <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
@@ -310,7 +310,7 @@ figure {
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
               <button type="button" class="btn btn-success" style="display: inline-block; float:right;">Success</button></span>
               <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
-              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}"></img>
+              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=null; this.src='/img/video-error.png'"></img>
               <br>
               <br>
               <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
