--- a/Recyclables/views/bin/addBins.handlebars
+++ b/Recyclables/views/bin/addBins.handlebars
@@ -28,8 +28,12 @@
 					</div>
 
 					<div style= "display: inline-block; float:right;">
-						<label for="threshold">Threshold</label>
+						<label for="threshold">Rubbish Threshold</label>
 					<input type="number" name="threshold" class="form-control" value="" min="0" required>
+
+					<div style= "display: inline-block; float:right;">
+						<label for="threshold">Crowd Threshold</label>
+					<input type="number" name="crowdthreshold" class="form-control" value="" min="0" required>
 					</div>
 					
 				
