--- a/Recyclables/views/dashboard/dashboard.handlebars
+++ b/Recyclables/views/dashboard/dashboard.handlebars
@@ -208,7 +208,7 @@ figure {
     background-color: #e0e0e0;
   }
 </style>
-  <div style = "margin-left: 3.5%; margin-right: 3.5%; margin-top: 3%;">
+  <div id = "body" style = "margin-left: 3.5%; margin-right: 3.5%; margin-top: 3%; display:none;">
     <div class="well" style="text-align: center;">
       <h3>Overview Dashboard for Recyclable Bins</h3>
       <p>Last refreshed: <span id = "datetime"></span></p>
@@ -223,6 +223,7 @@ figure {
                 <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
                 <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a></span>
                 <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span><span style="display: inline-block; float:right">{{dataValues.status}}</span></p>
+                
                 <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=null; this.src='/img/video-error.png'"></img>
                 <br>
                 <br>
@@ -252,7 +253,7 @@ figure {
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
               <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a></span>
               <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
-              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=null; this.src='/img/video-error.png'"></img>
+              <img class = "liveVid"width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=null; this.src='/img/video-error.png'"></img>
               <br>
               <br>
               <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
@@ -329,6 +330,8 @@ figure {
       </div>
     </div>
 </div>
+
+<p id = "msg">Loading</p>
 <script>
 
   var acc = document.getElementsByClassName("accordion");
@@ -457,4 +460,10 @@ figure {
 
     window.location.href = `/dashboard/location?loc=${$(tgt).data("id")}`
   })
+</script>
+<script type="text/javascript">
+$(window).on("load", function() {
+    $('#body').show();
+    $('#msg').hide();
+});
 </script>
