--- a/Recyclables/views/dashboard/dashboard.handlebars
+++ b/Recyclables/views/dashboard/dashboard.handlebars
@@ -207,7 +207,21 @@ figure {
     cursor: pointer;
     background-color: #e0e0e0;
   }
+
+  #myProgress {
+  width: 100%;
+  background-color: #ddd;
+}
+
+#file {
+  height: 30px;
+  background-color: #04AA6D;
+}
 </style>
+
+  <div id="myProgress">
+  <progress id="file" value="100" max="100" style="width: 0px"> 32% </progress>
+</div>
   <div id = "body" style = "margin-left: 3.5%; margin-right: 3.5%; margin-top: 3%; display:none;">
     <div class="well" style="text-align: center;">
       <h3>Overview Dashboard for Recyclable Bins</h3>
@@ -224,7 +238,7 @@ figure {
                 <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a></span>
                 <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span><span style="display: inline-block; float:right">{{dataValues.status}}</span></p>
                 
-                <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=null; this.src='/img/video-error.png'"></img>
+                <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=calculate(); this.src='/img/video-error.png'"></img>
                 <br>
                 <br>
                 <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
@@ -253,7 +267,7 @@ figure {
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
               <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a></span>
               <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
-              <img class = "liveVid"width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=null; this.src='/img/video-error.png'"></img>
+              <img class = "liveVid"width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=calculate(); this.src='/img/video-error.png'"></img>
               <br>
               <br>
               <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
@@ -282,7 +296,7 @@ figure {
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
               <a href="/bin/updatelevel/{{dataValues.bin_id}}"><button type="button" class="btn btn-success" style="display: inline-block; float:right;">Clear Bin</button></a></span>
               <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
-              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=null; this.src='/img/video-error.png'"></img>
+              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=calculate(); this.src='/img/video-error.png'"></img>
               <br>
               <br>
               <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
@@ -311,7 +325,7 @@ figure {
               <h3 style="display: inline-block;">{{dataValues.location_description}}</h3>
               <button type="button" class="btn btn-success" style="display: inline-block; float:right;">Success</button></span>
               <p><span style="width: 80%; float:left; display: inline-block; ">Level {{dataValues.floor_level}}</span></p>
-              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=null; this.src='/img/video-error.png'"></img>
+              <img width="100%" height="100%" src="{{dataValues.camera_ipaddress}}" onerror="this.onerror=calculate(); this.src='/img/video-error.png'"></img>
               <br>
               <br>
               <h3 id="{{dataValues.bin_id}}_plastic"style="margin: 0%">Plastic</h3>
@@ -331,7 +345,6 @@ figure {
     </div>
 </div>
 
-<p id = "msg">Loading</p>
 <script>
 
   var acc = document.getElementsByClassName("accordion");
@@ -462,8 +475,18 @@ figure {
   })
 </script>
 <script type="text/javascript">
+var error = 0
+function calculate(){
+  var total = {{alertlist.length}} + {{dangerlist.length}} + {{activelist.length}} + {{inactivelist.length}}
+  var percount = Math.round(100 / total)
+  error += percount
+  console.log(error)
+
+  document.getElementById("file").style.width = error+"%";
+}
+
 $(window).on("load", function() {
     $('#body').show();
-    $('#msg').hide();
+    $('#file').hide();
 });
 </script>
